0030669: Visualization - AIS_Manipulator ignores parent transformation

AIS_Manipulator::Transform() now considers object parent transformation.

Added new command vchild for easier testing of low-level connections between presentations.